last fix on mobile for tonight

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,10 @@
 html {font-family:monospace; color:rgb(30,30,30); font-size:medium;}
-body {width:600px; margin:auto;}
+body {max-width:600px; margin:auto;}
 
 header, article, footer {padding:1em 0; margin:1em 0;}
 
 div.divider {height:0; width:100%; border-top:solid black 1px;}
 
-h1, h2  {line-height:0.5;}
 li      {list-style:none;}
 a       {color:rgb(30,30,30,0.7); text-underline-offset:0.15em;} 
 a:hover {text-decoration:none;}
@@ -26,6 +25,8 @@ article.comicPage {display:flex; text-align:center;}
 div.writePageClickable img {width:100%;}
 .writeNav img {width:10%; margin:4em 0 0}
 
+.blogPost li {list-style-type:auto}
+
 nav:not(.contentList) {display:flex;}
 nav li {padding-right:0.5em;}
 
@@ -38,9 +39,14 @@ span.postTag  {float:right; width:15%; text-align:center; border-radius:0.3em; m
 .ongoing span.postTag {background:rgb(255, 255, 0, 0.4);}
 
 @media screen and (max-width:600px) {
-    body, body.comic {width:calc(100%-2em); min-width:350px; padding:1em}
+    body, body.comic {width:calc(100%-2em); min-width:350px; padding:1em; margin:0; margin:auto}
+
     .postTag, .postDate {display:none !important}
+
     div.writeNav {width:100%}
     .writeNav img {width:15%; margin:0;}
     .rarebitCredit img {width:30%; height:auto;}
+
+    figcaption {width:90%; margin:auto;}
+    h1, h2  {font-size:125%}
 }
